# egui-macos-test

./: Cargo.toml  createAppImage.sh
.github/workflows/: linux.yml  macos.yml  windows.yml
assets/: macos_starter
src/: main.rs  update_notifier.rs  util.rs
